--- a/Jupiter/WebContent/index.html
+++ b/Jupiter/WebContent/index.html
@@ -7,11 +7,7 @@
   <title>Item Recommendation Final</title>
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-  <!--<link rel="stylesheet" href="styles/main.css">-->
-  <style type="text/css">  
- @import "main.css";  
-</style>
-
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
   <header class="top-header">
@@ -85,12 +81,13 @@
       </li>
       <li>
         <p><i class="fa fa-phone fa-2x"></i></p>
-        <p>+1 000</p>
+        <p>+1000</p>
       </li>
     </ul>
   </footer>
   
   <script src="https://rawgit.com/emn178/js-md5/master/build/md5.min.js"></script>
-  <script src="scripts/main.js"></script>
+  <script src="scripts/mock.js"></script>
+  <script src="scripts/main0.js"></script>
 </body>
 </html>
