favorite items function added

--- a/Jupiter的副本/WebContent/index.html
+++ b/Jupiter的副本/WebContent/index.html
@@ -73,15 +73,15 @@
     <ul>
       <li>
         <p><i class="fa fa-map-o fa-2x"></i></p>
-        <p>Gainseville, FL</p>
+        <p>Gainesville, FL</p>
       </li>
       <li>
         <p><i class="fa fa-envelope-o fa-2x"></i></p>
-        <p>yanwei@ufl.com</p>
+        <p>yanwei@ufl.edu</p>
       </li>
       <li>
         <p><i class="fa fa-phone fa-2x"></i></p>
-        <p>+1000</p>
+        <p>000</p>
       </li>
     </ul>
   </footer>
